kubernetes/apps/localhost/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: localhost-ingress
  namespace: localhost
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - secretName: wildcard-tls-lab-winwithcherwin-com
      hosts:
        - "*.lab.winwithcherwin.com"
  rules:
    - host: localhost.lab.winwithcherwin.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: localhost-service
                port:
                  number: 80
